// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task list Should not render 1`] = `
"<ul>
<li>[ ]</li>
<li>[  ] not a todo item 2</li>
<li>[ x] not a todo item 3</li>
<li>[x ] not a todo item 4</li>
<li>[ x ] not a todo item 5</li>
</ul>
"
`;

exports[`Task list Should not render label 1`] = `
"<ul class=\\"task-list-container\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\"> unchecked item 1</li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\"> unchecked item 2</li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\"> unchecked item 3</li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\"> checked item 4</li>
</ul>
"
`;

exports[`Task list Should not render label after 1`] = `
"<ul class=\\"task-list-container\\">
<li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\"> unchecked item 1</label></li>
<li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\"> unchecked item 2</label></li>
<li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\"> unchecked item 3</label></li>
<li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\"> checked item 4</label></li>
</ul>
"
`;

exports[`Task list Should render 1`] = `
"<ul class=\\"task-list-container\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-0\\"><label class=\\"task-list-item-label\\" for=\\"task-item-0\\"> unchecked item 1</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-1\\"><label class=\\"task-list-item-label\\" for=\\"task-item-1\\"> unchecked item 2</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-2\\"><label class=\\"task-list-item-label\\" for=\\"task-item-2\\"> unchecked item 3</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\" id=\\"task-item-3\\"><label class=\\"task-list-item-label\\" for=\\"task-item-3\\"> checked item 4</label></li>
</ul>
"
`;

exports[`Task list Should render 2`] = `
"<ul class=\\"task-list-container\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-0\\"><label class=\\"task-list-item-label\\" for=\\"task-item-0\\"> unchecked todo item 1</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\" id=\\"task-item-1\\"><label class=\\"task-list-item-label\\" for=\\"task-item-1\\"> todo item 2</label></li>
</ul>
"
`;

exports[`Task list Should render nested list 1`] = `
"<ol>
<li>foo
<ul class=\\"task-list-container\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-0\\"><label class=\\"task-list-item-label\\" for=\\"task-item-0\\"> nested unchecked item 1</label></li>
<li>not a todo item 2</li>
<li>not a todo item 3</li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\" id=\\"task-item-1\\"><label class=\\"task-list-item-label\\" for=\\"task-item-1\\"> nested checked item 4</label></li>
</ul>
</li>
<li>bar</li>
<li>spam</li>
</ol>
"
`;

exports[`Task list Should render nested list 2`] = `
"<ul>
<li>foo
<ul class=\\"task-list-container\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-0\\"><label class=\\"task-list-item-label\\" for=\\"task-item-0\\"> nested unchecked item 1</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-1\\"><label class=\\"task-list-item-label\\" for=\\"task-item-1\\"> nested unchecked item 2</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\" id=\\"task-item-2\\"><label class=\\"task-list-item-label\\" for=\\"task-item-2\\"> nested checked item 3</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\" id=\\"task-item-3\\"><label class=\\"task-list-item-label\\" for=\\"task-item-3\\"> nested checked item 4</label></li>
</ul>
</li>
</ul>
"
`;

exports[`Task list Should render ordered list 1`] = `
"<ol class=\\"task-list-container\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\" id=\\"task-item-0\\"><label class=\\"task-list-item-label\\" for=\\"task-item-0\\"> checked ordered 1</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-1\\"><label class=\\"task-list-item-label\\" for=\\"task-item-1\\"> unchecked ordered 2</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\" checked=\\"checked\\" disabled=\\"disabled\\" id=\\"task-item-2\\"><label class=\\"task-list-item-label\\" for=\\"task-item-2\\"> checked ordered 3</label></li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" class=\\"task-list-item-checkbox\\"  disabled=\\"disabled\\" id=\\"task-item-3\\"><label class=\\"task-list-item-label\\" for=\\"task-item-3\\"> unchecked ordered 4</label></li>
</ol>
"
`;
